test/fail/exceptions/custom_exception.lly
#[
MyException: Correct!
Traceback:
    from custom_exception.lly:11: in __main__
]#

class MyException(msg: String) < Exception(msg) {

}

raise MyException("Correct!\n")
